crates/nirvash-macros/tests/fixtures/code_tests_legacy_driver.stderr
error: driver = ... is no longer supported; declare Runtime and fresh_runtime() on CodeConformanceSpec
   --> tests/fixtures/code_tests_legacy_driver.rs:107:49
    |
107 | #[code_tests(spec = Spec, init = initial_state, driver = tests::Driver)]
    |                                                 ^^^^^^
